--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -156,7 +156,7 @@
 
     <ion-row *ngIf="!loadingData">
       <ion-col width-100>
-        <button (click)="login()" class="normalButton" ion-button full large text-capitalize>
+        <button (tap)="login()" class="normalButton" ion-button full large text-capitalize>
           Login
         </button>
       </ion-col>
