--- a/src/pages/apps/apps.html
+++ b/src/pages/apps/apps.html
@@ -16,7 +16,7 @@
 <ion-content padding class="apps">
 
   <ion-row >
-    <ion-col (click)="goToView('dataEntry')" >
+    <ion-col (tap)="goToView($event,'dataEntry')" >
       <ion-list >
         <ion-item >
           <ion-thumbnail >
@@ -26,7 +26,7 @@
         </ion-item>
       </ion-list>
     </ion-col>
-    <ion-col width-45 (click)="goToView('eventCapture')" >
+    <ion-col width-45 (tap)="goToView($event,'eventCapture')" >
       <ion-list >
         <ion-item>
           <ion-thumbnail >
@@ -39,7 +39,7 @@
   </ion-row>
 
   <ion-row>
-    <ion-col width-45 (click)="goToView('dashboard')" >
+    <ion-col width-45 (tap)="goToView($event,'dashboard')" >
       <ion-list>
         <ion-item>
           <ion-thumbnail >
@@ -49,7 +49,7 @@
         </ion-item>
       </ion-list>
     </ion-col>
-    <ion-col (click)="goToView('report')"  >
+    <ion-col (tap)="goToView($event,'report')"  >
       <ion-list>
         <ion-item>
           <ion-thumbnail >
@@ -60,7 +60,7 @@
       </ion-list>
     </ion-col>
   </ion-row>
-  <!--<ion-col (click)="goToView('report')"  >-->
+  <!--<ion-col (tap)="goToView($event,'report')"  >-->
   <!--<ion-list>-->
   <!--<ion-item>-->
   <!--<ion-thumbnail >-->
@@ -71,7 +71,7 @@
   <!--</ion-list>-->
   <!--</ion-col>-->
   <!--<ion-row>-->
-    <!--<ion-col width-45 (click)="goToView('trackerCapture')" >-->
+    <!--<ion-col width-45 (tap)="goToView($event,'trackerCapture')" >-->
       <!--<ion-list >-->
         <!--<ion-item >-->
           <!--<ion-thumbnail >-->
