--- a/src/pages/event-capture-home/event-capture-home.html
+++ b/src/pages/event-capture-home/event-capture-home.html
@@ -18,7 +18,7 @@
     <ion-grid>
       <ion-row>
         <ion-col>
-          <button [disabled]="!currentSelectionStatus.orgUnit" class="dataEntryButton" text-capitalize ion-button full large (click)="openOrganisationUnitModal()" color="whitecolor">
+          <button [disabled]="!currentSelectionStatus.orgUnit" class="dataEntryButton" text-capitalize ion-button full large (tap)="openOrganisationUnitModal()" color="whitecolor">
             <span *ngIf="currentSelectionStatus.isOrgUnitLoaded" >
               {{ selectedOrganisationUnitLabel }}
             </span>
@@ -31,7 +31,7 @@
       </ion-row>
       <ion-row>
         <ion-col>
-          <button [disabled]="!currentSelectionStatus.program" class="dataEntryButton" text-capitalize ion-button full large (click)="openProgramsModal()" color="whitecolor">
+          <button [disabled]="!currentSelectionStatus.program" class="dataEntryButton" text-capitalize ion-button full large (tap)="openProgramsModal()" color="whitecolor">
             <span *ngIf="!currentSelectionStatus.isProgramLoaded" >
               <page-loading loadingSize="small"></page-loading>
               Loading programs
@@ -75,7 +75,7 @@
               <ion-item-divider>
                 <ion-row>
                   <ion-col>
-                    <button color="dark" ion-button full clear small (click)="changePagination(0)">
+                    <button color="dark" ion-button full clear small (tap)="changePagination(0)">
                       <ion-icon name="ios-arrow-back-outline"></ion-icon>
                       <ion-icon name="ios-arrow-back-outline"></ion-icon>
                       <ion-icon name="ios-arrow-back-outline"></ion-icon>
@@ -83,7 +83,7 @@
                     </button>
                   </ion-col>
                   <ion-col>
-                    <button color="dark" ion-button full clear small (click)="changePagination(currentPage - 1)">
+                    <button color="dark" ion-button full clear small (tap)="changePagination(currentPage - 1)">
                       <ion-icon name="ios-arrow-back-outline"></ion-icon>
                       <ion-icon name="ios-arrow-back-outline"></ion-icon>
                     </button>
@@ -94,14 +94,14 @@
                     </button>
                   </ion-col>
                   <ion-col >
-                    <button color="dark" ion-button full clear small (click)="changePagination(currentPage + 1)">
+                    <button color="dark" ion-button full clear small (tap)="changePagination(currentPage + 1)">
                       <ion-icon name="ios-arrow-forward-outline"></ion-icon>
                       <ion-icon name="ios-arrow-forward-outline"></ion-icon>
                     </button>
                   </ion-col>
 
                   <ion-col >
-                    <button color="dark" ion-button full clear small (click)="changePagination(entryFormSections.length -1)">
+                    <button color="dark" ion-button full clear small (tap)="changePagination(entryFormSections.length -1)">
                       <ion-icon name="ios-arrow-forward-outline"></ion-icon>
                       <ion-icon name="ios-arrow-forward-outline"></ion-icon>
                       <ion-icon name="ios-arrow-forward-outline"></ion-icon>
@@ -137,7 +137,7 @@
             </tr>
             </thead>
             <tbody>
-            <tr *ngFor="let row of tableFormat.rows" (click)="goToEventView(row)" >
+            <tr *ngFor="let row of tableFormat.rows" (tap)="goToEventView(row)" >
               <td *ngFor="let column of row.data">{{column}} </td>
             </tr>
             </tbody>
@@ -168,12 +168,12 @@
                         <!-- edit or view event actions -->
                         <ion-row>
                           <ion-col >
-                            <button ion-button full (click)="goToEventView(event)">
+                            <button ion-button full (tap)="goToEventView(event)">
                               <ion-icon name="eye"></ion-icon>&nbsp;&nbsp;View
                             </button>
                           </ion-col>
                           <ion-col >
-                            <button ion-button full (click)="gotToEditEvent(event)">
+                            <button ion-button full (tap)="gotToEditEvent(event)">
                               <ion-icon name="create"></ion-icon>&nbsp;&nbsp;Edit
                             </button>
                           </ion-col>
@@ -197,12 +197,12 @@
 <!--- menu as well as add new event as fab icon-->
 <div *ngIf="isAllParameterSet" >
   <ion-fab bottom left>
-    <button ion-fab (click)="showFieldSelectionMenu()" color="light">
+    <button ion-fab (tap)="showFieldSelectionMenu()" color="light">
       <ion-icon name="grid"></ion-icon>
     </button>
   </ion-fab>
   <ion-fab bottom right >
-    <button ion-fab (click)="goToEventRegister()" color="favorite">
+    <button ion-fab (tap)="goToEventRegister()" color="favorite">
       <ion-icon name="add"></ion-icon>
     </button>
   </ion-fab>
