--- a/src/pages/organisation-units/organisation-units.html
+++ b/src/pages/organisation-units/organisation-units.html
@@ -4,7 +4,7 @@
       Organisation unit selection
     </ion-title>
     <ion-buttons start>
-      <button class="normalButton" ion-button text-capitalize full large (click)="dismiss()">
+      <button class="normalButton" ion-button text-capitalize full large (tap)="dismiss()">
         Close
         <!--<ion-icon name="md-close"></ion-icon>-->
       </button>
@@ -29,55 +29,55 @@
     <div *ngIf="!loadingData" >
       <div *ngFor="let orgUnit of organisationUnitsList">
         <ion-item>
-          <ion-icon name="ios-add-circle-outline" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
-          <ion-icon name="ios-remove-circle-outline" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
+          <ion-icon name="ios-add-circle-outline" (tap)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
+          <ion-icon name="ios-remove-circle-outline" (tap)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
           <!--<ion-icon name="ios-folder-outline" *ngIf="orgUnit.children.length==0" item-left></ion-icon>-->
-          <span (click)="setSelectedOrgUnit(orgUnit)" [color]="(currentSelectedOrgUnitName == orgUnit.name) ?'current' : 'font-color'"  >{{ orgUnit.name }}</span>
+          <span (tap)="setSelectedOrgUnit(orgUnit)" [color]="(currentSelectedOrgUnitName == orgUnit.name) ?'current' : 'font-color'"  >{{ orgUnit.name }}</span>
         </ion-item>
         <div *ngIf="hasOrgUnitChildrenOpened[orgUnit.id]" style="padding-left: 10px">
 
           <div *ngFor="let orgUnit of orgUnit.children">
             <ion-item>
-              <ion-icon name="ios-add-circle-outline" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
-              <ion-icon name="ios-remove-circle-outline" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
+              <ion-icon name="ios-add-circle-outline" (tap)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
+              <ion-icon name="ios-remove-circle-outline" (tap)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
               <!--<ion-icon name="ios-folder-outline" *ngIf="orgUnit.children.length==0" item-left></ion-icon>-->
-              <span (click)="setSelectedOrgUnit(orgUnit)" [color]="(currentSelectedOrgUnitName == orgUnit.name) ?'current' : 'font-color'" >{{ orgUnit.name }}</span>
+              <span (tap)="setSelectedOrgUnit(orgUnit)" [color]="(currentSelectedOrgUnitName == orgUnit.name) ?'current' : 'font-color'" >{{ orgUnit.name }}</span>
             </ion-item>
             <div *ngIf="hasOrgUnitChildrenOpened[orgUnit.id]" style="padding-left: 10px">
 
               <div *ngFor="let orgUnit of orgUnit.children">
                 <ion-item>
-                  <ion-icon name="ios-add-circle-outline" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
-                  <ion-icon name="ios-remove-circle-outline" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
+                  <ion-icon name="ios-add-circle-outline" (tap)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
+                  <ion-icon name="ios-remove-circle-outline" (tap)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
                   <!--<ion-icon name="ios-folder-outline" *ngIf="orgUnit.children.length==0" item-left></ion-icon>-->
-                  <span (click)="setSelectedOrgUnit(orgUnit)" [color]="(currentSelectedOrgUnitName == orgUnit.name) ?'current' : 'font-color'"  >{{ orgUnit.name }}</span>
+                  <span (tap)="setSelectedOrgUnit(orgUnit)" [color]="(currentSelectedOrgUnitName == orgUnit.name) ?'current' : 'font-color'"  >{{ orgUnit.name }}</span>
                 </ion-item>
                 <div *ngIf="hasOrgUnitChildrenOpened[orgUnit.id]" style="padding-left: 10px">
 
                   <div *ngFor="let orgUnit of orgUnit.children">
                     <ion-item>
-                      <ion-icon name="ios-add-circle-outline" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
-                      <ion-icon name="ios-remove-circle-outline" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
+                      <ion-icon name="ios-add-circle-outline" (tap)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
+                      <ion-icon name="ios-remove-circle-outline" (tap)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
                       <!--<ion-icon name="ios-folder-outline" *ngIf="orgUnit.children.length==0" item-left></ion-icon>-->
-                      <span (click)="setSelectedOrgUnit(orgUnit)" [color]="(currentSelectedOrgUnitName == orgUnit.name) ?'current' : 'font-color'" >{{ orgUnit.name }}</span>
+                      <span (tap)="setSelectedOrgUnit(orgUnit)" [color]="(currentSelectedOrgUnitName == orgUnit.name) ?'current' : 'font-color'" >{{ orgUnit.name }}</span>
                     </ion-item>
                     <div *ngIf="hasOrgUnitChildrenOpened[orgUnit.id]" style="padding-left: 10px">
 
                       <div *ngFor="let orgUnit of orgUnit.children">
                         <ion-item>
-                          <ion-icon name="ios-add-circle-outline" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
-                          <ion-icon name="ios-remove-circle-outline" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
+                          <ion-icon name="ios-add-circle-outline" (tap)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
+                          <ion-icon name="ios-remove-circle-outline" (tap)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
                           <!--<ion-icon name="ios-folder-outline" *ngIf="orgUnit.children.length==0" item-left></ion-icon>-->
-                          <span (click)="setSelectedOrgUnit(orgUnit)" [color]="(currentSelectedOrgUnitName == orgUnit.name) ?'current' : 'font-color'" >{{ orgUnit.name }}</span>
+                          <span (tap)="setSelectedOrgUnit(orgUnit)" [color]="(currentSelectedOrgUnitName == orgUnit.name) ?'current' : 'font-color'" >{{ orgUnit.name }}</span>
                         </ion-item>
                         <div *ngIf="hasOrgUnitChildrenOpened[orgUnit.id]" style="padding-left: 10px">
 
                           <div *ngFor="let orgUnit of orgUnit.children">
                             <ion-item>
-                              <ion-icon name="ios-add-circle-outline" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
-                              <ion-icon name="ios-remove-circle-outline" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
+                              <ion-icon name="ios-add-circle-outline" (tap)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
+                              <ion-icon name="ios-remove-circle-outline" (tap)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
                               <!--<ion-icon name="ios-folder-outline" *ngIf="orgUnit.children.length==0" item-left></ion-icon>-->
-                              <span (click)="setSelectedOrgUnit(orgUnit)" [color]="(currentSelectedOrgUnitName == orgUnit.name) ?'current' : 'font-color'" >{{ orgUnit.name }}</span>
+                              <span (tap)="setSelectedOrgUnit(orgUnit)" [color]="(currentSelectedOrgUnitName == orgUnit.name) ?'current' : 'font-color'" >{{ orgUnit.name }}</span>
                             </ion-item>
                             <div *ngIf="hasOrgUnitChildrenOpened[orgUnit.id]" style="padding-left: 10px">
 
