update visualization  services as well as fixing loading notification on event capture module

--- a/src/pages/event-field-selection-menu/event-field-selection-menu.html
+++ b/src/pages/event-field-selection-menu/event-field-selection-menu.html
@@ -10,8 +10,9 @@
       Event List Fields selection
     </ion-title>
     <ion-buttons start>
-      <button class="normalButton" ion-button full large  (tap)="dismiss()">
-        <ion-icon name="md-close"></ion-icon>
+      <button class="normalButton" ion-button text-capitalize full large (tap)="dismiss()">
+        close
+        <!--<ion-icon name="md-close"></ion-icon>-->
       </button>
     </ion-buttons>
   </ion-toolbar>
@@ -20,16 +21,17 @@
 
 <ion-content class="eventListSelection">
   <ion-grid>
-    <ion-row>
-      <ion-col >
-        <button ion-button full text-capitalize (tap)="onSavingChanges()">Save</button>
-      </ion-col>
-      <ion-col >
-        <button ion-button full text-capitalize (tap)="autoSelect('selectAll')" *ngIf="!hasAllSelected"> Select All</button>
-        <button ion-button full text-capitalize (tap)="autoSelect('unSelectAll')" *ngIf="hasAllSelected">Un-select all</button>
-      </ion-col>
-    </ion-row>
+
     <div *ngIf="hasDataLoaded">
+      <ion-row>
+        <ion-col >
+          <button ion-button full text-capitalize (tap)="onSavingChanges()">Save</button>
+        </ion-col>
+        <ion-col >
+          <button ion-button full text-capitalize (tap)="autoSelect('selectAll')" *ngIf="!hasAllSelected"> Select All</button>
+          <button ion-button full text-capitalize (tap)="autoSelect('unSelectAll')" *ngIf="hasAllSelected">Un-select all</button>
+        </ion-col>
+      </ion-row>
       <ion-row>
         <ion-col >
           <ion-list >
