--- a/src/pages/event-capture-home/event-capture-home.html
+++ b/src/pages/event-capture-home/event-capture-home.html
@@ -68,126 +68,139 @@
       </div>
 
       <div *ngIf="isAllParameterSet">
-        <!-- pagination for event list-->
-        <ion-row *ngIf="eventListSections.length > 0">
+
+        <div *ngIf="!currentSelectionStatus.isEventsLoadedFromServer" >
           <ion-col width="100">
-            <ion-item-group >
-              <ion-item-divider>
-                <ion-row>
-                  <ion-col>
-                    <button color="dark" ion-button full clear small (tap)="changePagination(0)">
-                      <ion-icon name="ios-arrow-back-outline"></ion-icon>
-                      <ion-icon name="ios-arrow-back-outline"></ion-icon>
-                      <ion-icon name="ios-arrow-back-outline"></ion-icon>
-                      <ion-icon name="ios-arrow-back-outline"></ion-icon>
-                    </button>
-                  </ion-col>
-                  <ion-col>
-                    <button color="dark" ion-button full clear small (tap)="changePagination(currentPage - 1)">
-                      <ion-icon name="ios-arrow-back-outline"></ion-icon>
-                      <ion-icon name="ios-arrow-back-outline"></ion-icon>
-                    </button>
-                  </ion-col>
-                  <ion-col>
-                    <button ion-button color="dark" full clear small >
-                      {{ paginationLabel }}
-                    </button>
-                  </ion-col>
-                  <ion-col >
-                    <button color="dark" ion-button full clear small (tap)="changePagination(currentPage + 1)">
-                      <ion-icon name="ios-arrow-forward-outline"></ion-icon>
-                      <ion-icon name="ios-arrow-forward-outline"></ion-icon>
-                    </button>
-                  </ion-col>
-
-                  <ion-col >
-                    <button color="dark" ion-button full clear small (tap)="changePagination(entryFormSections.length -1)">
-                      <ion-icon name="ios-arrow-forward-outline"></ion-icon>
-                      <ion-icon name="ios-arrow-forward-outline"></ion-icon>
-                      <ion-icon name="ios-arrow-forward-outline"></ion-icon>
-                      <ion-icon name="ios-arrow-forward-outline"></ion-icon>
-                    </button>
-                  </ion-col>
-
-                </ion-row>
-              </ion-item-divider>
-            </ion-item-group>
+            <page-loading loadingSize="large" loadingMessage="{{currentSelectionStatus.eventsLoadingStatus}}"></page-loading>
           </ion-col>
-        </ion-row>
+        </div>
 
-        <!-- notification if no event list found from local as well login instance-->
-        <div *ngIf="!hasEvents">
-          <ion-row>
+        <!-- checking if event has been loaded -->
+        <div *ngIf="currentSelectionStatus.isEventsLoadedFromServer" >
+          <!-- pagination for event list-->
+          <ion-row *ngIf="eventListSections.length > 0">
             <ion-col width="100">
-              <ion-item-group wrap text>
-                <ion-item-divider wrap text>
-                  <p wrap text >There are no events at the moment</p>
+              <ion-item-group >
+                <ion-item-divider>
+                  <ion-row>
+                    <ion-col>
+                      <button color="dark" ion-button full clear small (tap)="changePagination(0)">
+                        <ion-icon name="ios-arrow-back-outline"></ion-icon>
+                        <ion-icon name="ios-arrow-back-outline"></ion-icon>
+                        <ion-icon name="ios-arrow-back-outline"></ion-icon>
+                        <ion-icon name="ios-arrow-back-outline"></ion-icon>
+                      </button>
+                    </ion-col>
+                    <ion-col>
+                      <button color="dark" ion-button full clear small (tap)="changePagination(currentPage - 1)">
+                        <ion-icon name="ios-arrow-back-outline"></ion-icon>
+                        <ion-icon name="ios-arrow-back-outline"></ion-icon>
+                      </button>
+                    </ion-col>
+                    <ion-col>
+                      <button ion-button color="dark" full clear small >
+                        {{ paginationLabel }}
+                      </button>
+                    </ion-col>
+                    <ion-col >
+                      <button color="dark" ion-button full clear small (tap)="changePagination(currentPage + 1)">
+                        <ion-icon name="ios-arrow-forward-outline"></ion-icon>
+                        <ion-icon name="ios-arrow-forward-outline"></ion-icon>
+                      </button>
+                    </ion-col>
+
+                    <ion-col >
+                      <button color="dark" ion-button full clear small (tap)="changePagination(entryFormSections.length -1)">
+                        <ion-icon name="ios-arrow-forward-outline"></ion-icon>
+                        <ion-icon name="ios-arrow-forward-outline"></ion-icon>
+                        <ion-icon name="ios-arrow-forward-outline"></ion-icon>
+                        <ion-icon name="ios-arrow-forward-outline"></ion-icon>
+                      </button>
+                    </ion-col>
+
+                  </ion-row>
                 </ion-item-divider>
               </ion-item-group>
             </ion-col>
           </ion-row>
-        </div>
 
-        <!-- display events as table -->
-        <div style="overflow-x: auto">
-          <table *ngIf="tableFormat && hasEvents">
-            <thead>
-            <tr>
-              <th *ngFor="let header of tableFormat.header">{{header.name}}</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr *ngFor="let row of tableFormat.rows" (tap)="goToEventView(row)" >
-              <td *ngFor="let column of row.data">{{column}} </td>
-            </tr>
-            </tbody>
-          </table>
-        </div>
+          <!-- notification if no event list found from local as well login instance-->
+          <div *ngIf="!hasEvents">
+            <ion-row>
+              <ion-col width="100">
+                <ion-item-group wrap text>
+                  <ion-item-divider wrap text>
+                    <p wrap text >There are no events at the moment</p>
+                  </ion-item-divider>
+                </ion-item-group>
+              </ion-col>
+            </ion-row>
+          </div>
 
-        <!--display events as card -->
+          <!-- display events as table -->
+          <div style="overflow-x: auto">
+            <table *ngIf="tableFormat && hasEvents">
+              <thead>
+              <tr>
+                <th *ngFor="let header of tableFormat.header">{{header.name}}</th>
+              </tr>
+              </thead>
+              <tbody>
+              <tr *ngFor="let row of tableFormat.rows" (tap)="goToEventView(row)" >
+                <td *ngFor="let column of row.data">{{column}} </td>
+              </tr>
+              </tbody>
+            </table>
+          </div>
 
-        <div *ngIf="eventListSections.length > 0">
-          <!-- event list --->
-          <div *ngFor="let section of eventListSections">
-            <div *ngIf="section.id == currentPage">
-              <div *ngFor="let event of section.events">
-                <ion-row>
-                  <ion-col width="100">
-                    <ion-item-group>
-                      <ion-item-divider>
-                        <p><b>Incident date</b>&nbsp;&nbsp;:&nbsp;&nbsp;{{ event.eventDate }}</p>
-                        <div *ngFor="let dataValue of event.dataValues">
-                          <div *ngIf="dataElementToDisplay[dataValue.dataElement]">
-                            <p><b>{{ dataElementToDisplay[dataValue.dataElement].name }}</b>&nbsp;&nbsp;:&nbsp;&nbsp;{{ dataValue.value }}</p>
+          <!--display events as card -->
+
+          <div *ngIf="eventListSections.length > 0">
+            <!-- event list --->
+            <div *ngFor="let section of eventListSections">
+              <div *ngIf="section.id == currentPage">
+                <div *ngFor="let event of section.events">
+                  <ion-row>
+                    <ion-col width="100">
+                      <ion-item-group>
+                        <ion-item-divider>
+                          <p><b>Incident date</b>&nbsp;&nbsp;:&nbsp;&nbsp;{{ event.eventDate }}</p>
+                          <div *ngFor="let dataValue of event.dataValues">
+                            <div *ngIf="dataElementToDisplay[dataValue.dataElement]">
+                              <p><b>{{ dataElementToDisplay[dataValue.dataElement].name }}</b>&nbsp;&nbsp;:&nbsp;&nbsp;{{ dataValue.value }}</p>
+                            </div>
                           </div>
-                        </div>
-                        <p><b>Status</b>&nbsp;&nbsp;:&nbsp;&nbsp;
-                          <span *ngIf="event.syncStatus == 'new event' || event.syncStatus == 'not synced'" >Offline</span>
-                          <span *ngIf="!(event.syncStatus == 'new event' || event.syncStatus == 'not synced')" >Online</span>
-                        </p>
-                        <!-- edit or view event actions -->
-                        <ion-row>
-                          <ion-col >
-                            <button ion-button full (tap)="goToEventView(event)">
-                              <ion-icon name="eye"></ion-icon>&nbsp;&nbsp;View
-                            </button>
-                          </ion-col>
-                          <ion-col >
-                            <button ion-button full (tap)="gotToEditEvent(event)">
-                              <ion-icon name="create"></ion-icon>&nbsp;&nbsp;Edit
-                            </button>
-                          </ion-col>
-                        </ion-row>
-                      </ion-item-divider>
-                    </ion-item-group>
-                  </ion-col>
-                </ion-row>
+                          <p><b>Status</b>&nbsp;&nbsp;:&nbsp;&nbsp;
+                            <span *ngIf="event.syncStatus == 'new event' || event.syncStatus == 'not synced'" >Offline</span>
+                            <span *ngIf="!(event.syncStatus == 'new event' || event.syncStatus == 'not synced')" >Online</span>
+                          </p>
+                          <!-- edit or view event actions -->
+                          <ion-row>
+                            <ion-col >
+                              <button ion-button full (tap)="goToEventView(event)">
+                                <ion-icon name="eye"></ion-icon>&nbsp;&nbsp;View
+                              </button>
+                            </ion-col>
+                            <ion-col >
+                              <button ion-button full (tap)="gotToEditEvent(event)">
+                                <ion-icon name="create"></ion-icon>&nbsp;&nbsp;Edit
+                              </button>
+                            </ion-col>
+                          </ion-row>
+                        </ion-item-divider>
+                      </ion-item-group>
+                    </ion-col>
+                  </ion-row>
 
 
+                </div>
               </div>
             </div>
           </div>
         </div>
+
+
+
       </div>
     </ion-grid>
   </div>
@@ -195,7 +208,7 @@
 </ion-content>
 
 <!--- menu as well as add new event as fab icon-->
-<div *ngIf="isAllParameterSet" >
+<div *ngIf="isAllParameterSet && currentSelectionStatus.isEventsLoadedFromServer" >
   <ion-fab bottom left>
     <button ion-fab (tap)="showFieldSelectionMenu()" color="light">
       <ion-icon name="grid"></ion-icon>
