--- a/www/index.html
+++ b/www/index.html
@@ -17,13 +17,13 @@
   <script src="cordova.js"></script>
 
   <!-- un-comment this code to enable service worker-->
-  <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('service-worker.js')
-        .then(() => console.log('service worker installed'))
-        .catch(err => console.log('Error', err));
-    }
-  </script>
+  <!--<script>-->
+    <!--if ('serviceWorker' in navigator) {-->
+      <!--navigator.serviceWorker.register('service-worker.js')-->
+        <!--.then(() => console.log('service worker installed'))-->
+        <!--.catch(err => console.log('Error', err));-->
+    <!--}-->
+  <!--</script>-->
 
   <link href="build/main.css" rel="stylesheet">
   <script type="text/javascript" src="assets/library/dhis2/jQuery/calendars/jquery.calendars.min.js"></script>
@@ -37,25 +37,27 @@
   <script type="text/javascript" src="assets/library/dhis2/jQuery/calendars/jquery.calendars.julian.min.js"></script>
   <script type="text/javascript" src="assets/library/dhis2/jQuery/calendars/jquery.calendars.nepali.min.js"></script>
   <script type="text/javascript" src="assets/library/dhis2/jQuery/calendars/jquery.calendars.thai.min.js"></script>
+
   <script src="assets/library/reportModule.js"></script>
   <script src="assets/library/dhis2/dhis2.util.js"></script>
   <script src="assets/library/dhis2/dhis2.period.js"></script>
   <script>
     dhis2.period.calendar = $.calendars.instance('gregorian');
     dhis2.period.generator = new dhis2.period.PeriodGenerator(dhis2.period.calendar, dhis2.period.DEFAULT_DATE_FORMAT);
+    ///alert(JSON.stringify(dhis2));
   </script>
 
 </head>
 <body>
 
-<!-- Ionic's root component and where the app will load -->
-<ion-app></ion-app>
+  <!-- Ionic's root component and where the app will load -->
+  <ion-app></ion-app>
 
-<!-- The polyfills js is generated during the build process -->
-<script src="build/polyfills.js"></script>
+  <!-- The polyfills js is generated during the build process -->
+  <script src="build/polyfills.js"></script>
 
-<!-- The bundle js is generated during the build process -->
-<script src="build/main.js"></script>
+  <!-- The bundle js is generated during the build process -->
+  <script src="build/main.js"></script>
 
 </body>
 </html>
