--- a/src/pages/data-set-selection/data-set-selection.html
+++ b/src/pages/data-set-selection/data-set-selection.html
@@ -20,7 +20,7 @@
         <ion-list>
           <ion-item *ngFor="let dataSet of dataSetsList"   (tap)="setSelectedDataSet(dataSet)">
             <ion-icon name="list" item-left></ion-icon>
-            <span (tap)="setSelectedDataSet(orgUnit)" [color]="(currentSelectedDataSetName == dataSet.name) ?'current' : 'font-color'">{{ dataSet.name }}</span>
+            <span  [color]="(currentSelectedDataSetName == dataSet.name) ?'current' : 'font-color'">{{ dataSet.name }}</span>
           </ion-item>
           <ion-item *ngIf = "dataSetsList.length == 0">
             There is no Data entry form to select
