fixing bound porgress tracker with instance issues on changing different instance

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -123,7 +123,7 @@
         <ion-row >
           <ion-col >
             <ion-item>
-              <ion-input [(ngModel)]="loginData.serverUrl" type="url" name ="serverUrl" placeholder="Enter server URL"></ion-input>
+              <ion-input [(ngModel)]="loginData.serverUrl" type="text" name ="serverUrl" placeholder="Enter server URL"></ion-input>
             </ion-item>
 
             <ion-item>
